--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Chivo:wght@900&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  font-size: 16px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (min-width: 320px) {
+  .container {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  .container {
+    font-size: 22px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  max-width: 640px;
+  margin: 1em auto;
+  padding: 1em;
+  font-size: 18px;
+  overflow: hidden;
+}
+
+.gf {
+  color: green;
+  font-family: "Chivo", sans-serif;
+}
+
+.names {
+  width: 100%;
+}
+
+table {
+  width: 100%;
+  cursor: pointer;
+  user-select: none;
+  margin-top: 16px;
+  border-spacing: 0 16px;
+}
+
+/* tr{
+    margin-bottom: 16px;
+} */
+
+td {
+  border: 2px solid rgba(0, 128, 0, .5);
+  width: 33.33333%;
+  padding: 1em;
+  border-radius: 4px;
+  vertical-align: top;
+}
+
+.bio {
+  margin-top: 4px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* summary::marker{
+    content: "◎";
+} */
+
+summary span {
+  margin-left: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+details[open] .title {
+  text-decoration: underline;
+}
+
+.content {
+  margin-top: 16px;
+  cursor: auto;
+}
+
+iframe {
+  margin-top: 4px;
+}
+
+.track {
+  margin-top: 16px;
 }
