--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,30 @@ iframe {
 .track {
   margin-top: 16px;
 }
+
+.form{
+  margin: 16px 0px 8px 0px;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+}
+
+form input{
+  margin: 4px 0px;
+  border: 2px solid black;
+}
+
+input:focus{
+  outline: none;
+  border: 2px solid green;
+} 
+
+.form-button{
+  /* background-color: rgba(0, 128, 0, .); */
+  outline: none;
+  border: solid green;
+  border-image: none;
+}
