--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ iframe {
 form {
   display: flex;
   flex-direction: column;
-  width: 250px;
+  /* width: 250px; */
 }
 
 form input {
@@ -108,6 +108,10 @@ input:focus {
   border-image: none;
 }
 
+.submit-button{
+  width: 250px;
+}
+  
 #textarea {
   font-family: Arial, Helvetica, sans-serif;
   border: 2px solid black;
