--- a/src/App.css
+++ b/src/App.css
@@ -108,10 +108,10 @@ input:focus {
   border-image: none;
 }
 
-.submit-button{
+.submit-button {
   width: 250px;
 }
-  
+
 #textarea {
   font-family: Arial, Helvetica, sans-serif;
   border: 2px solid black;
@@ -129,4 +129,29 @@ input:focus {
 
 .back-to-top:hover {
   text-decoration: underline;
+}
+
+.modal-button {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: white;
+  border: 2px solid green;
+  box-shadow: 24;
+  outline: none;
+  padding: 24px;
+}
+
+@media screen and (max-width: 500px) {
+  .modal {
+    width: 300px;
+    padding: 8px;
+  }
 }
